# transit-dbt-sandbox

./: .gitignore  README.md  dbt_project.yml  load_gtfs.py  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
macros/: generate_schema_name.sql  gtfs_time_to_seconds.sql
models/: sources.yml
models/docs/: gtfs_core.md
models/marts/: fct_service_calendar.sql  fct_service_stops.sql  fct_service_stops_incremental.sql  fct_service_trips.sql  mart.yml
models/staging/: staging.yml  stg_calendar.sql  stg_calendar_dates.sql  stg_routes.sql  stg_stop_times.sql  stg_stops.sql  stg_trips.sql
